[package]
name = "dspf-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bytesize = "1.3.0"
color-eyre = "0.6.2"
crossterm = "0.27.0"
globset = "0.4.14"
nom = "7.1.3"
pest = "2.6"
pest_derive = "2.6"
ratatui = "0.26.1"
